--- a/formulaire.html
+++ b/formulaire.html
@@ -48,7 +48,7 @@
 
 
 
-<!-- ici la classe du gaauche bas-->
+<!-- ici la classe du gauche bas-->
  <div class="gauche-bas">
 
       <div class="name">
@@ -71,6 +71,7 @@
        <div class="demande">
         <label for="demande">Nature de la demander:</label><br>
        </div>
+         <classe perm>
        <div class="perm">
          <input type="checkbox" id="investissement" name="nature" value="investissement">
         <label for="investissement">investiment</label><br>
